<resources>
    <string name="app_name">Comeato</string>
    <string name="home">Home</string>
    <string name="properties">Properties</string>
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_your_fav_place">Search your fav place</string>
    <string name="view_all"><u>View All</u></string>
    <string name="choose_from_categories">Choose from Categories</string>
    <string name="pick_your_category">Pick your category</string>
    <string name="special_deals">Special Deals</string>
    <string name="choose_your_near_by_deals">Choose property for getting Deals</string>
    <string name="pick_your_best_deal">Pick your best deal</string>
    <string name="trending_spot">Trending Spots</string>
    <string name="get_nearby_offers">Get nearby Offers</string>
    <string name="sign_in">Sign In</string>
    <string name="get_your_best_deal_from_top_brands">Get your best deal from top brands</string>
    <string name="_91">+91</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in_with_otp">Sign In with OTP</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create">Create</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="confirm_password">Confirm-Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="to_access_all_features">Create your account to Access all features</string>
    <string name="comeato">Comeato</string>
    <string name="enter_your_phone">Enter Your Phone</string>
    <string name="you_will_receive_4_digit_code_for_phone_number_verification">You will receive 4 digit code for Phone number verification</string>
    <string name="send_otp">Send OTP</string>
    <string name="_4_digit_code_has_been_sent_to_your_number">4 Digit code has been sent to your number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="confirm">Confirm</string>
    <string name="get_your_profile_with_best_deals">Get your profile with best deals</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="login_now">Login Now</string>
    <string name="logout">Logout</string>
    <string name="edit">edit</string>
    <string name="type">type</string>
    <string name="show">show</string>
    <string name="similar_options">Similar Options</string>
    <string name="read_more"><u>Read More</u></string>
    <string name="view_less"><u>View Less</u></string>
    <string name="view_more">View More</string>
    <string name="offers_available_for_you">Offers Available</string>
    <string name="restaurant">Restaurant</string>
    <string name="view_details">View Details</string>
    <string name="buy_now">Buy Now</string>
    <string name="plan_features">Plan Features</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="show_deal_code">Show Deal Code</string>
    <string name="choose_your_nlocated_city">Choose Your\nLocated City</string>
    <string name="invalid_mobile_number">Invalid Mobile number</string>
    <string name="invalid_password_min_8_char">Invalid password (Min 8 char)</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="enter_password">Enter password</string>
    <string name="email_required">Email is Required</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="required_name">Please enter your name</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="propertyid">PropertyId</string>
    <string name="propertyName">PropertyName</string>
    <string name="property_detail_is_not_available">Property Detail is not Available</string>
    <string name="deal_detail">Deal Detail</string>
    <string name="t_amp_c"><![CDATA[T&C]]></string>
    <string name="show_details">Show Details</string>
    <string name="deal_s_terms_conditions"><![CDATA[Deal\'s Terms & Conditions]]></string>
    <string name="offers_terms_conditions"><![CDATA[Offer\'s Terms & Conditions]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="send_us_a_message">Send Us A Message</string>
    <string name="enquiry">Enquiry</string>
    <string name="feel_free_to_drop_a_message">Feel Free To Drop a Message</string>
    <string name="submit">Submit</string>
    <string name="invite_your_friends">Invite Your Friends</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="favourite_properties">Favourite Properties</string>
    <string name="your_transactions">Your Transactions</string>
    <string name="show_direction">Show Direction</string>
    <string name="choose_image_source">Choose Image source</string>
    <string name="title_activity_deals">DealsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="my_deals">My Deals</string>
    <string name="apply">Apply</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="enter_valid_otp_code">Enter Valid OTP Code</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="reset_password">Reset Password</string>
    <string name="mobile_number">Mobile_number</string>
    <string name="something_went_wrong_retry">Something went Wrong! Retry</string>
    <string name="your_wishlist_is_empty">Your wishlist is empty</string>
    <string name="tap_to_heart_button_to_start_saving_your_favorite_items">Tap to heart button to start saving your Favorite items</string>
    <string name="add_now">ADD NOW</string>
    <string name="homelayouttype">HomeLayoutType</string>
    <string name="searchtype">SearchType</string>
    <string name="searchcategoryid">SearchCategoryId</string>
    <string name="featured_property">Featured Property</string>
    <string name="account">Account</string>
    <string name="latest_properties">Latest Properties</string>
    <string name="sorry_no_property_found">Sorry no property found</string>
    <string name="thanks_for_contacting_us">Thanks for Contacting Us</string>
    <string name="your_submission_has_been_received_n_we_will_be_in_touch_and_contact_you_soon">Your Submission has been received \n We will be in touch and contact you soon!</string>
    <string name="okay">Okay</string>
    <string name="please_write_your_message">Please write your message</string>
    <string name="sorry_no_deal_found">Sorry no deal Found</string>
    <string name="we_couldn_t_find_any_redeemed_or_open_deal">We couldn\'t find any redeemed or open deal</string>
    <string name="sorry_no_offer_found">Sorry no offer found</string>
    <string name="at_present_there_is_no_offer_available">At present, there is no offer available</string>
    <string name="valid_until">Valid Until :</string>
    <string name="expired">Expired</string>
    <string name="active">Active</string>
    <string name="status">Status</string>
    <string name="category">Category</string>
    <string name="rupee_symbol">₹</string>
    <string name="months">months</string>
    <string name="apply_on">Apply On</string>
    <string name="press_again_to_exit_app">Press again to exit app</string>
    <string name="notificationBroadcaster">NotificationBroadcaster</string>
    <string name="notificationCount">NotificationCount</string>
    <string name="intent_type">intent_type</string>
</resources>