<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="isLoading"
            type="Boolean" />

    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:background="@color/color_gray_60"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.Login.LoginActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="35sp"
            android:id="@+id/txtSignIn"
            android:textColor="@color/white"
            style="@style/Style_bold_font"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/guideline2" />


        <TextView
            android:textColor="@color/white"
            style="@style/Style_medium_font"
            android:id="@+id/txtTitle"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@id/txtSignIn"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            android:text="@string/get_your_best_deal_from_top_brands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <LinearLayout
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            android:gravity="center"
            android:id="@+id/llLoginInputs"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:hint="@string/email"
                style="@style/StyleInputField"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:background="@drawable/rounded__drawable"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:hint="@string/password"
                    style="@style/StyleInputField"
                    android:layout_weight="0.2"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry" />
                <ImageView
                    android:src="@drawable/ic_eye"
                    android:layout_weight="1"
                    android:id="@+id/imgPasswordToggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:layout_marginTop="2dp"
                android:layout_gravity="end"
                style="@style/Style_bold_font"
                android:textColor="@color/white"
                android:id="@+id/txtForgotPass"
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:text="@string/login"
                app:backgroundTint="@null"
                android:id="@+id/btnLogin"
                android:background="@drawable/btn_gradient"
                android:paddingHorizontal="80dp"
                app:showProgress="@{isLoading}"
                android:layout_marginTop="40dp"
                android:textAllCaps="false"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="1.7dp"
                android:layout_marginTop="5dp"
                android:id="@+id/txtLine"
                android:background="@color/white"/>

            <TextView
                style="@style/Style_bold_font"
                android:id="@+id/txtOtpSignIn"
                app:layout_constraintEnd_toEndOf="@id/txtLine"
                app:layout_constraintStart_toStartOf="@id/txtLine"
                app:layout_constraintTop_toBottomOf="@id/txtLine"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:shadowDx="7"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_otp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="40dp"
                    android:layout_marginEnd="20dp"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/color_gray_80"
                    app:cardCornerRadius="50dp"
                    android:layout_height="40dp">
                    <ImageView
                        android:src="@drawable/ic_google"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="40dp"
                    app:cardCornerRadius="50dp"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/color_gray_80"
                    android:layout_marginStart="10dp"
                    android:layout_height="40dp">
                    <ImageView
                        android:src="@drawable/ic_facebook"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </LinearLayout>




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAccountCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/llLoginInputs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/txtNoAccount"
                style="@style/Style_regular_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/txtCreate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtCreate"
                style="@style/Style_bold_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/create"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/txtNoAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtNoAccount"
                app:layout_constraintTop_toTopOf="@id/txtNoAccount" />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="267dp" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="42dp" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="42dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>