<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="isProgress"
            type="Boolean" />

    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:background="@color/color_gray_35"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Activity.SignUp.SignUpActivity">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="35sp"
                android:id="@+id/txtSignUp"
                android:textColor="@color/white"
                style="@style/Style_bold_font"
                app:layout_constraintStart_toEndOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@id/guideline2" />


            <TextView
                android:textColor="@color/white"
                style="@style/Style_medium_font"
                android:id="@+id/txtTitle"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toBottomOf="@id/txtSignUp"
                app:layout_constraintStart_toEndOf="@id/guideline3"
                android:text="@string/to_access_all_features"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>




            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_marginTop="30dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@id/txtTitle"
                app:layout_constraintEnd_toEndOf="@id/guideline4"
                android:layout_height="535dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/background3"
                    android:layout_height="match_parent">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/gradient2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:gravity="center"
                    android:padding="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/llLoginInputs"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:hint="@string/full_name"
                        style="@style/StyleInputField"
                        android:layout_height="wrap_content"
                        tools:ignore="RtlSymmetry" />

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:hint="@string/email"
                        android:layout_marginTop="15dp"
                        style="@style/StyleInputField"
                        android:layout_height="wrap_content"
                        tools:ignore="RtlSymmetry" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/rounded__drawable"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/_91"
                            android:padding="11dp"
                            android:drawableStart="@drawable/ic_india_flag"
                            android:layout_width="wrap_content"
                            android:drawablePadding="10dp"
                            style="@style/Style_bold_font"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginVertical="7dp"
                            android:background="@color/color_gray_100"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"/>

                        <EditText
                            android:id="@+id/edtNumber"
                            android:layout_width="match_parent"
                            android:hint="@string/phone_number"
                            style="@style/StyleInputField"
                            android:background="@null"
                            android:maxLength="10"
                            android:inputType="number"
                            android:layout_height="wrap_content"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:background="@drawable/rounded__drawable"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:hint="@string/password"
                            style="@style/StyleInputField"
                            android:layout_weight="0.2"
                            android:background="@null"
                            android:inputType="textPassword"
                            android:layout_height="wrap_content"
                            tools:ignore="RtlSymmetry" />
                        <ImageView
                            android:src="@drawable/ic_eye"
                            android:layout_weight="1"
                            android:id="@+id/imgPasswordToggle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:background="@drawable/rounded__drawable"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtConfirmPassword"
                            android:layout_width="match_parent"
                            android:hint="@string/confirm_password"
                            style="@style/StyleInputField"
                            android:layout_weight="0.2"
                            android:background="@null"
                            android:inputType="textPassword"
                            android:layout_height="wrap_content"
                            tools:ignore="RtlSymmetry" />
                        <ImageView
                            android:src="@drawable/ic_eye"
                            android:layout_weight="1"
                            android:inputType="textPassword"
                            android:id="@+id/imgConfirmPassToggle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>



                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:text="@string/register"
                        app:backgroundTint="@null"
                        android:id="@+id/btnRegister"
                        android:background="@drawable/btn_gradient"
                        android:paddingHorizontal="80dp"
                        android:layout_marginTop="40dp"
                        app:showProgress="@{isProgress}"
                        android:textAllCaps="false"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="40dp"
                            android:layout_marginEnd="20dp"
                            app:strokeWidth="1dp"
                            app:strokeColor="@color/color_gray_80"
                            app:cardCornerRadius="50dp"
                            android:layout_height="40dp">
                            <ImageView
                                android:src="@drawable/ic_google"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="40dp"
                            app:cardCornerRadius="50dp"
                            app:strokeWidth="1dp"
                            app:strokeColor="@color/color_gray_80"
                            android:layout_marginStart="10dp"
                            android:layout_height="40dp">
                            <ImageView
                                android:src="@drawable/ic_facebook"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </com.google.android.material.card.MaterialCardView>

                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/clAccountCreate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/txtNoAccount"
                            style="@style/Style_regular_font"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/already_have_an_account"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/txtLogin"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txtLogin"
                            style="@style/Style_bold_font"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/sign_in"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="@id/txtNoAccount"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/txtNoAccount"
                            app:layout_constraintTop_toTopOf="@id/txtNoAccount" />
                    </androidx.constraintlayout.widget.ConstraintLayout>



                </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="70dp" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="28dp" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="29dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</layout>